--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-LINKEDIN_CLIENT_ID=788tikx31tlxr7
-LINKEDIN_CLIENT_SECRET=WPL_AP1.UH17vI9IwnynugWZ.G9nCzg==
+LINKEDIN_CLIENT_ID=86lnmivch9tovy
+LINKEDIN_CLIENT_SECRET=WPL_AP1.qwBLnG8Wa3oYgVOp.4Cj07w==
