change env variables

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 LINKEDIN_CLIENT_ID=86lnmivch9tovy
 LINKEDIN_CLIENT_SECRET=WPL_AP1.qwBLnG8Wa3oYgVOp.4Cj07w==
+REDIRECT_URI=https://linkedin-repost-live-lcsf.vercel.app/linkedin-callback
